--- a/style.css
+++ b/style.css
@@ -572,15 +572,15 @@ p {
     transform: scale(1);
     box-shadow: 0px 0px 0.59px 0px #56e078;
     
-box-shadow: 0px 0px 1.18px 0px #56e078;
+box-shadow: 0px 0px 1.18px 0px #43958147;
 
-box-shadow: 0px 0px 4.13px 0px #56e078;
+box-shadow: 0px 0px 4.13px 0px #43958147;
 
-box-shadow: 0px 0px 8.27px 0px #56e078;
+box-shadow: 0px 0px 8.27px 0px #43958147;
 
-box-shadow: 0px 0px 14.17px 0px #56e078;
+box-shadow: 0px 0px 14.17px 0px #43958147;
 
-box-shadow: 0px 0px 24.8px 0px #56e078;
+box-shadow: 0px 0px 24.8px 0px #43958147;
 
   }
   @keyframes pulse {
